--- a/packages/forms/package.json
+++ b/packages/forms/package.json
@@ -2,7 +2,7 @@
   "name": "@lorica/uc-design-system-forms",
   "version": "3.3.2",
   "release": "1583350587083",
-  "description": "Form functionality for Lunar.",
+  "description": "Form functionality for UCDS.",
   "license": "MIT",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
