--- a/packages/icons/package.json
+++ b/packages/icons/package.json
@@ -2,7 +2,7 @@
   "name": "@lorica/uc-design-system-icons",
   "version": "3.1.1",
   "release": "1583350587083",
-  "description": "Icons for Lunar.",
+  "description": "Icons for UCDS.",
   "license": "(MIT AND Apache-2.0)",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
